# deep-photometric-stereo-network

./: .gitignore  download_blobs.sh  download_merl_brdf_database.sh
merl_brdf_database/: BRDFRead.cpp  CMakeLists.txt
